<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/activity_tracker_action_record_mode"
          android:title="@string/record"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/activity_tracker_action_follow_mode"
          android:title="@string/follow"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/activity_tracker_action_stats"
          android:title="@string/stats"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/activity_tracker_action_rename"
          android:title="@string/rename"
          app:showAsAction="never"/>

    <item android:id="@+id/activity_tracker_action_delete"
          android:title="@string/delete"
          app:showAsAction="never"/>

<item android:id="@+id/activity_tracker_action_share_position"
          android:title="@string/share_position"
          app:showAsAction="never"/>

</menu>